# picturas-watermark-tool-ms

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
picturas_watermark_tool_ms/: config.py  main.py  watermark_request_message.py  watermark_result_message.py  watermark_tool.py
picturas_watermark_tool_ms/core/: message_processor.py  message_queue_setup.py  tool.py
picturas_watermark_tool_ms/core/messages/: request_message.py  result_message.py
usage_example/: docker-compose.yml
usage_example/publisher/: Dockerfile
usage_example/request_mocker/: Dockerfile  main.py
